# finny

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  feature_list.json  main.py  pyproject.toml
.claude/: settings.json
app/: config.py  database.py  dependencies.py  exceptions.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py
app/api/v1/endpoints/accounts/: router.py  schemas.py
app/api/v1/endpoints/auth/: router.py  schemas.py
app/api/v1/endpoints/budgets/: router.py  schemas.py
app/api/v1/endpoints/categories/: router.py  schemas.py
app/api/v1/endpoints/statistics/: router.py  schemas.py
app/api/v1/endpoints/tags/: router.py  schemas.py
app/api/v1/endpoints/transactions/: router.py  schemas.py
app/api/v1/endpoints/users/: router.py  schemas.py
app/core/: security.py
app/models/: __init__.py  account.py  base.py  budget.py  category.py  tag.py  transaction.py  user.py
app/repositories/: account_repo.py  base.py  budget_repo.py  category_repo.py  tag_repo.py  transaction_repo.py  user_repo.py
app/schemas/: common.py
app/services/: account_service.py  auth_service.py  budget_service.py  category_service.py  statistics_service.py  tag_service.py  transaction_service.py  user_service.py
docs/: coding.md  folder_structure.md
migrations/: env.py
migrations/versions/: 3c5c7196db38_fix_timestamp_timezone.py  647aee90bb3f_add_user_preferences.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_budgets.py  test_categories.py  test_infrastructure.py  test_tags.py  test_transactions.py
